--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-aiohttp==3.9.3
-aiosignal==1.3.1
+#aiohttp==3.9.3
+#aiosignal==1.3.1
 altair==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
@@ -16,7 +16,7 @@ cachetools==5.3.2
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
+#chroma-hnswlib==0.7.3
 chromadb==0.4.24
 circuitbreaker==1.4.0
 click==8.1.7
@@ -31,7 +31,7 @@ Deprecated==1.2.14
 dirtyjson==1.0.8
 distro==1.9.0
 executing==2.0.1
-faiss-cpu==1.7.4
+#faiss-cpu==1.7.4
 fastapi==0.110.0
 fastavro==1.9.4
 filelock==3.13.1
@@ -94,14 +94,14 @@ mdurl==0.1.2
 mmh3==4.1.0
 monotonic==1.6
 mpmath==1.3.0
-multidict==6.0.5
+#multidict==6.0.5
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.4
 oauthlib==3.2.2
-oci==2.121.1
+#oci==2.121.1
 onnxruntime==1.17.1
 openai==1.13.3
 opentelemetry-api==1.23.0
@@ -114,7 +114,8 @@ opentelemetry-proto==1.23.0
 opentelemetry-sdk==1.23.0
 opentelemetry-semantic-conventions==0.44b0
 opentelemetry-util-http==0.44b0
-oracledb @ file:///home/oracle/work/drivers/oracledb-2.0.0.dev20231121-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=eb0001ccf34e172ce15622b6867c73d29b235ec65139aabf12e8f5c64ddac079
+#oracledb @ file:///home/oracle/work/drivers/oracledb-2.0.0.dev20231121-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=eb0001ccf34e172ce15622b6867c73d29b235ec65139aabf12e8f5c64ddac079
+oracledb==2.0.0
 orjson==3.9.15
 overrides==7.7.0
 packaging==23.2
@@ -140,7 +141,7 @@ pydeck==0.8.1b0
 Pygments==2.17.2
 PyMuPDF==1.23.25
 PyMuPDFb==1.23.22
-pyOpenSSL==23.3.0
+#pyOpenSSL==23.3.0
 pypdf==4.0.2
 PyPika==0.48.9
 pyproject_hooks==1.0.0
